--- a/TPV2/TPV2.vcxproj.filters
+++ b/TPV2/TPV2.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClInclude Include="src\components\ShowAtOpposideSide.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
+    <ClInclude Include="src\game\game.h">
+      <Filter>Header Files\game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\json\JSONValue.cpp">
@@ -223,6 +226,9 @@
     </ClCompile>
     <ClCompile Include="src\components\ShowAtOpposideSide.cpp">
       <Filter>Source Files\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\game\game.cpp">
+      <Filter>Source Files\game</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
