--- a/TPV2/TPV2.vcxproj.filters
+++ b/TPV2/TPV2.vcxproj.filters
@@ -207,6 +207,9 @@
     <ClInclude Include="src\ecs\System.h">
       <Filter>Header Files\ecs</Filter>
     </ClInclude>
+    <ClInclude Include="src\components\PauseCtrl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\json\JSONValue.cpp">
@@ -325,6 +328,9 @@
     </ClCompile>
     <ClCompile Include="src\ecs\System.cpp">
       <Filter>Source Files\ecs</Filter>
+    </ClCompile>
+    <ClCompile Include="src\components\PauseCtrl.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
