--- a/TPV2/TPV2.vcxproj.filters
+++ b/TPV2/TPV2.vcxproj.filters
@@ -183,6 +183,9 @@
     <ClInclude Include="src\components\PauseCtrl.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
+    <ClInclude Include="src\components\Clickable.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\json\JSONValue.cpp">
@@ -282,6 +285,9 @@
       <Filter>Source Files\states</Filter>
     </ClCompile>
     <ClCompile Include="src\components\PauseCtrl.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\components\Clickable.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
   </ItemGroup>
